// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  className="  "
>
  <span>
    <span>
      121
    </span>
  </span>
</div>
`;

exports[`Storyshots Circle Default 1`] = `
<div
  className=" "
>
  <span />
</div>
`;

exports[`Storyshots Slider Default 1`] = `
<div
  onClick={[Function]}
>
  <div
    className=" "
  >
    <span>
      circle1
    </span>
  </div>
  <div
    className="  "
    style={
      Object {
        "clipPath": "polygon(0% 100%, 100% 100%, 100% 100%, 0% 100%)",
      }
    }
  >
    <span>
      circle2
    </span>
  </div>
</div>
`;
